# toggdoro

./: Cargo.toml
src/: config.rs  lib.rs  main.rs  notifier.rs  pomodoro.rs  toggl.rs
src/notifier/: dbus.rs  mail.rs  slack.rs
