[package]
name = "toggdoro"
version = "0.1.0"
authors = ["INAJIMA Daisuke <inajima@sopht.jp>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = "2"
failure = "*"
lazy_static = "1"
lettre-openssl111 = "0.9.0"
lettre-openssl111_email = "0.9.0"
notify-rust = "3"
reqwest = "0.9"
serde = "1"
serde_derive = "1"
serde_json = "1"
signal-hook = "0.1"
toml = "*"
