[package]
name = "toggdoro"
version = "0.1.0"
authors = ["INAJIMA Daisuke <inajima@sopht.jp>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = "2"
failure = "*"
lazy_static = "1"
lettre = "0.9"
lettre_email = "0.9"
notify-rust = "3"
regex = "1"
reqwest = "0.9"
serde = "1"
serde_derive = "1"
serde_json = "1"
signal-hook = "0.1"
slack-hook = "0.8"
tinytemplate = "1.0"
toml = "*"
